script consolidated, README updated